Fri Mar  4 10:07:18 CET 2011
	Avoid using a pipe for signalling as well, just use server
	socket shutdown (also for thread-per-connection). -CG

Thu Mar  3 21:42:47 CET 2011
	Fixing issue where Base64 decode fails when char is defined 
        as unsigned char  (Mantis 1666). -CG/tmayer

Tue Mar  1 13:58:04 CET 2011
	Allow use of 'poll' in combination with the external select mode.
	Avoid using pthread signals (SIGALRM), use pipe instead. 
	Corrected timeout calculation (s vs. ms). -CG

Wed Feb 23 14:21:44 CET 2011
	Removing useless code pointed out by Eivind Sarto. -CG

Fri Feb 18 11:03:59 CET 2011
	Handle large (>2 GB) file transfers with sendfile on 32-bit
	systems better; handle odd sendfile failures by libc/kernel
	by falling back to standard 'SEND'. -CG

Sun Feb 13 10:52:29 CET 2011
	Handle gnutls receive error(s) for interrupted SSL
	connections better. -MS
	Releasing libmicrohttpd 0.9.7. -CG

Fri Feb 11 10:15:38 CET 2011
	Fixing parameter ordering in documentation (#1659). -wellska

Thu Jan 27 10:51:39 CET 2011
	Disable 'EXTRA_CHECKS's by default as suggested in #1652
 	(I guess it is time). -CG/timn

Thu Jan 27 10:48:55 CET 2011
	Removing bogus assertion in basic authentication code (#1651). -CG/timn

Tue Jan 25 14:10:45 CET 2011
	Releasing libmicrohttpd 0.9.6. -CG

Mon Jan 24 16:36:35 CET 2011
	Fixing compilation error if DAUTH_SUPPORT was 0 (#1646). -CG/bplant

Tue Jan 18 23:58:09 CET 2011
	Fixing hash calculation in digest auth; old function had
	collisions causing the browser to challenge users for
	authentication too often. -CG/AW

Fri Jan 14 19:19:45 CET 2011
	Removing dead code, adding missing new symbols to export list.
	Fixed two missing NULL checks after malloc operations. -CG

Mon Jan 10 14:07:33 CET 2011
	Releasing libmicrohttpd 0.9.5. -CG

Wed Jan  5 15:20:11 CET 2011
	Fixing double-locking on non-Linux platforms when using
	MHD_create_response_from_fd (#1639). -CG
	Avoid use of strndup for better portability (#1636). -CG
