@@ -1,3 +1,9 @@
+Fri Mar  4 10:24:04 CET 2011
+	Added new API to allow MHD server to initiate connection to
+	client (special use-case for servers behind NAT), thereby
+	addressing #1661 (externally created connections).
+	Releasing libmicrohttpd 0.9.8. -CG
+
 Fri Mar  4 10:07:18 CET 2011
 	Avoid using a pipe for signalling as well, just use server
 	socket shutdown (also for thread-per-connection). -CG
